@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.915 2008-06-02 22:29:43 castaglia Exp $
+$Id: NEWS,v 1.916 2008-06-10 16:29:07 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -17,6 +17,7 @@ CVS
 - Bug 3082 - Use "DEFAULT" keyword instead of "ALL" for Trace directive.
   Hopefully the "DEFAULT" keyword will be more accurate, more descriptive
   of the actual functionality triggered by the keyword.
+- Bug 3083 - Multiple issues with handling of <Class> definitions.
 
 1.3.2rc1 - Released 15-Apr-2008
 --------------------------------
